--- a/index4.html
+++ b/index4.html
@@ -1,194 +1,73 @@
 <!doctype html>
 <html lang="zh-Hant">
-<head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>中↔韓 同聲傳譯｜只播譯音給其他人（防回傳鏈｜4060 加速）</title>
-
+<title>中↔韓 同聲傳譯｜極速（自己端即時朗讀＋4060 加速）</title>
 <style>
-  :root{
-    --bg:#0b1220; --bg2:#0e1830; --card:#0f1b33cc; --muted:#8aa0c2; --text:#e9f0ff;
-    --primary:#6aa7ff; --primary-2:#7be2ff; --accent:#c9f27b; --danger:#ff6b6b; --ok:#75e0a2;
-    --ring:#213454; --border:#20304a; --shadow:0 10px 30px rgba(0,0,0,.35); --radius:16px;
-  }
-  body{
-    margin:0; min-height:100vh; color:var(--text);
-    font-family:ui-sans-serif, system-ui, -apple-system, "Noto Sans TC", "Microsoft JhengHei", Segoe UI, Roboto, Arial;
-    background:
-      radial-gradient(1200px 600px at 10% -10%, #264b9a33, transparent 60%),
-      radial-gradient(1000px 500px at 110% 10%, #1a7fb833, transparent 60%),
-      linear-gradient(180deg, var(--bg), var(--bg2));
-  }
-  .wrap{ max-width:1080px; margin:0 auto; padding:28px 18px 40px; }
-  .hero{ display:flex; align-items:center; gap:14px; margin-bottom:18px; }
-  .logo{ width:42px; height:42px; border-radius:12px;
-    background: conic-gradient(from 220deg, var(--primary), var(--primary-2), var(--accent), var(--primary));
-    box-shadow: 0 0 0 6px #6aa7ff22, var(--shadow); }
-  h2{ margin:0; font-size:22px; letter-spacing:.3px; }
-  .subtitle{ color:var(--muted); font-size:13px; margin-top:2px; }
-
-  .card{
-    background: var(--card); backdrop-filter: blur(10px); border:1px solid var(--border);
-    border-radius: var(--radius); box-shadow: var(--shadow); padding:18px;
-  }
-
-  .grid{ display:grid; gap:12px; grid-template-columns: repeat(12, 1fr); align-items:center; }
-  .col-2{ grid-column: span 2; }
-  .col-3{ grid-column: span 3; }
-  .col-4{ grid-column: span 4; }
-  .col-5{ grid-column: span 5; }
-  .col-6{ grid-column: span 6; }
-  .col-12{ grid-column: span 12; }
-  @media (max-width:880px){ .grid>*{ grid-column: span 12 !important; } }
-
-  label{ font-size:13px; color:var(--muted); display:block; margin-bottom:6px; }
-  input[type="text"], select{
-    width:100%; padding:10px 12px; background:#0b1730; color:var(--text);
-    border:1px solid var(--ring); border-radius:12px; outline:none; transition: box-shadow .2s, border-color .2s;
-  }
-  input[type="text"]:focus, select:focus{ border-color: var(--primary); box-shadow: 0 0 0 4px #6aa7ff22; }
-
-  .switches{ display:flex; flex-wrap:wrap; gap:12px 18px; align-items:center; }
-  .switches label{ display:flex; align-items:center; gap:8px; margin:0; }
-  .switches input[type="checkbox"]{ inline-size:18px; block-size:18px; accent-color: var(--primary); }
-
-  .btns{ display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
-  button{
-    border:1px solid var(--ring); color:var(--text); background:#0b1730;
-    padding:10px 14px; border-radius:12px; cursor:pointer;
-    transition:transform .05s, box-shadow .2s, border-color .2s, background .2s;
-  }
-  button:active{ transform: translateY(1px); }
-  button[disabled]{ opacity:.5; cursor:not-allowed; }
-  .btn-primary{ background: linear-gradient(180deg, #6aa7ff, #5b8ffb); border-color:#6aa7ffcc; color:#0b1220; font-weight:700; }
-  .btn-danger{ background: linear-gradient(180deg, #ff7b7b, #ff6262); border-color:#ff9a9a; color:#1a0c0c; font-weight:700; }
-
-  .status{ font-size:12px; padding:6px 10px; border-radius:999px; border:1px solid var(--ring);
-    background:#0b1730; color:var(--muted); display:inline-flex; align-items:center; gap:8px; }
-  .dot{ width:8px; height:8px; border-radius:50%; background:#8aa0c2; box-shadow: 0 0 0 4px #8aa0c210; }
-  .now .dot{ background: var(--ok); box-shadow: 0 0 0 4px #75e0a220; } .now{ color:var(--ok)!important; border-color:#2d5a4a; }
-
-  .tx{
-    font-family: ui-monospace, Menlo, Consolas, monospace; font-size:12px; color:#cfe2ff; background:#0b1730;
-    padding:6px 10px; border-radius:10px; border:1px solid var(--ring);
-  }
-
-  .logs{
-    margin-top:16px; padding:14px 14px 18px; border:1px solid var(--ring); border-radius:14px;
-    background: radial-gradient(400px 180px at 10% -10%, #6aa7ff10, transparent 50%), #071226;
-    height:390px; overflow:auto; font-size:13.5px; line-height:1.6; box-shadow: inset 0 0 0 1px #ffffff05, var(--shadow);
-    white-space:pre-wrap;
-  }
-  .logs::-webkit-scrollbar{ width:10px; height:10px; }
-  .logs::-webkit-scrollbar-thumb{ background: linear-gradient(180deg, #3a5f9d, #2d4e86); border-radius:10px; border:2px solid #0b1220; }
-
-  .hint{ color:var(--muted); font-size:12px; }
+  body{font-family:system-ui,-apple-system,"Noto Sans TC","Microsoft JhengHei",Arial;padding:20px;max-width:920px;margin:auto}
+  .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
+  input,select,button{padding:8px 10px;border:1px solid #bbb;border-radius:10px;background:#fff}
+  button{cursor:pointer}
+  button[disabled]{opacity:.5;cursor:not-allowed}
+  .pill{padding:4px 10px;border-radius:999px;background:#efefef;font-size:12px}
+  .logs{margin-top:12px;padding:10px;border:1px solid #eee;border-radius:10px;background:#fafafa;height:380px;overflow:auto;font-size:14px;white-space:pre-wrap}
+  .now{color:#1b7fbd}
+  .stat{font-family:monospace}
+  .hint{color:#666;font-size:13px}
 </style>
-</head>
-
 <body>
-  <div class="wrap">
-    <div class="hero">
-      <div class="logo" aria-hidden="true"></div>
-      <div>
-        <h2>中↔韓 同聲傳譯（只播譯音給其他人｜不回傳給發話者）</h2>
-        <div class="subtitle">杜絕「中→韓→中」回傳鏈｜4060 加速｜AirPods/裝置切換支援</div>
-      </div>
-    </div>
+  <h2>中↔韓 同聲傳譯（說一句翻一句｜自己端立即朗讀｜Edge TTS 供他人播放）</h2>
 
-    <div class="card" style="margin-bottom:14px;">
-      <div class="grid">
-        <div class="col-4">
-          <label for="name">名稱(이름)</label>
-          <input id="name" type="text" value="Public" placeholder="你的名字 / 이름" />
-        </div>
-
-        <div class="col-3">
-          <label for="srcLang">來源語言(원어)</label>
-          <select id="srcLang">
-            <option value="zh" selected>中文 (중국어)</option>
-            <option value="ko">韓文 (한국어)</option>
-          </select>
-        </div>
-
-        <div class="col-5">
-          <label>連線(연결)</label>
-          <div class="btns">
-            <button id="join" class="btn-primary">加入(입장)</button>
-            <button id="leave" class="btn-danger" disabled>離開(나가기)</button>
-            <span id="status" class="status"><span class="dot"></span> 未連線(미연결)</span>
-            <span class="tx" id="tx">TX: 0 pkt/s</span>
-          </div>
-        </div>
-
-        <div class="col-12">
-          <div class="switches">
-            <label><input id="mute" type="checkbox"> 不送出麥克風(마이크 전송 안 함)</label>
-            <label><input id="echo" type="checkbox" checked> 回聲抑制(에코 제거)</label>
-            <label><input id="ns"   type="checkbox" checked> 降噪(소음 억제)</label>
-            <label><input id="agc"  type="checkbox"> 自動增益(자동 이득)</label>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="grid">
-        <div class="col-6">
-          <label for="micSel">輸入裝置(마이크)</label>
-          <select id="micSel"></select>
-        </div>
-        <div class="col-6">
-          <label for="outSel">輸出裝置(출력, MP3)</label>
-          <select id="outSel"></select>
-        </div>
-        <div class="col-12">
-          <div class="hint">系統只播放「譯音 MP3」，永不播放「原音 WAV」。播放期間暫停送出麥克風以避免回傳鏈。</div>
-        </div>
-      </div>
-
-      <div class="logs" id="logs"></div>
-    </div>
+  <div class="row">
+    <label>名稱</label>
+    <input id="name" type="text" value="Public" />
+    <label>來源語言</label>
+    <select id="srcLang">
+      <option value="zh" selected>中文</option>
+      <option value="ko">韓文</option>
+    </select>
+    <button id="join">加入</button>
+    <button id="leave" disabled>離開</button>
+    <span class="pill" id="status">未連線</span>
   </div>
 
+  <div class="row" style="margin-top:10px">
+    <label><input id="mute" type="checkbox"> 不送出麥克風</label>
+    <label><input id="echo" type="checkbox" checked> 回聲抑制</label>
+    <label><input id="ns"   type="checkbox" checked> 降噪</label>
+    <label><input id="agc"  type="checkbox"> 自動增益</label>
+    <span class="stat" id="tx">TX: 0 pkt/s</span>
+  </div>
+
+  <div class="row" style="margin-top:10px">
+    <label for="micSel">輸入裝置</label>
+    <select id="micSel"></select>
+    <label for="outSel">輸出裝置（Edge TTS MP3 用）</label>
+    <select id="outSel"></select>
+    <span class="hint">你自己聽到的是瀏覽器朗讀（走系統預設輸出）；Edge TTS 的 MP3 只播給其他人，會走這裡選的輸出。</span>
+  </div>
+
+  <div class="logs" id="logs"></div>
+
 <script>
-/* 換成 cloudflared 顯示的網址（含 https://） */
 const TUNNEL_HOST = "https://port-yea-myrtle-lib.trycloudflare.com";
 
 let ws=null, audioCtx=null, worklet=null, sp=null, stream=null, pingTimer=null, txTimer=null;
 let txPkts=0;
 
 let devicesCache=[]; let currentMicId=""; let currentOutId="";
+
 const $ = (s)=>document.querySelector(s);
 const log = (s)=>{ const el=$('#logs'); el.textContent+=s+"\n"; el.scrollTop=el.scrollHeight; };
-
-/* 播放抑制（Ducking）：播放他人音訊時暫停送麥，避免「中→韓→中」回傳鏈 */
-let playbackCount = 0;
-let lastPlaybackEndAt = 0;
-const SUPPRESS_TAIL_MS = 250;
-function micSuppressed(){
-  return $('#mute').checked || playbackCount>0 || (performance.now() - lastPlaybackEndAt) < SUPPRESS_TAIL_MS;
-}
 
 async function refreshDevices(){
   devicesCache = await navigator.mediaDevices.enumerateDevices();
   const mics = devicesCache.filter(d=>d.kind==="audioinput");
   const outs = devicesCache.filter(d=>d.kind==="audiooutput");
-
   const micSel=$('#micSel'); micSel.innerHTML="";
-  mics.forEach(d=>{
-    const o=document.createElement('option');
-    o.value=d.deviceId; o.textContent=d.label || `麥克風/마이크 (${d.deviceId.slice(0,6)}…)`;
-    micSel.appendChild(o);
-  });
-
+  mics.forEach(d=>{ const o=document.createElement('option'); o.value=d.deviceId; o.textContent=d.label || `麥克風(${d.deviceId.slice(0,6)}…)`; micSel.appendChild(o); });
   const outSel=$('#outSel'); outSel.innerHTML="";
-  outs.forEach(d=>{
-    const o=document.createElement('option');
-    o.value=d.deviceId; o.textContent=d.label || `輸出/출력 (${d.deviceId.slice(0,6)}…)`;
-    outSel.appendChild(o);
-  });
-
+  outs.forEach(d=>{ const o=document.createElement('option'); o.value=d.deviceId; o.textContent=d.label || `輸出(${d.deviceId.slice(0,6)}…)`; outSel.appendChild(o); });
   if (currentMicId && [...micSel.options].some(o=>o.value===currentMicId)) micSel.value=currentMicId;
   if (currentOutId && [...outSel.options].some(o=>o.value===currentOutId)) outSel.value=currentOutId;
 }
@@ -216,10 +95,10 @@ function cleanupAudio(){
   worklet=sp=null; audioCtx=null; stream=null; pingTimer=txTimer=null; txPkts=0;
 }
 function leave(){
-  if(ws){ try{ ws.close(); }catch(_){ } }
+  if(ws){ try{ ws.close(); }catch(_){} }
   cleanupAudio();
   $('#join').disabled=false; $('#leave').disabled=true;
-  const s=$('#status'); s.classList.remove('now'); s.innerHTML='<span class="dot"></span> 未連線(미연결)';
+  $('#status').textContent="未連線"; $('#status').classList.remove('now');
 }
 
 async function fallbackScriptProcessor(source){
@@ -239,15 +118,15 @@ async function fallbackScriptProcessor(source){
     for(let off=0; off<pcm.length; off+=pkt){
       const sl=pcm.subarray(off, off+pkt);
       if(sl.length===pkt){
-        if(!micSuppressed() && ws && ws.readyState===1){
+        txPkts++;
+        if(!$('#mute').checked && ws && ws.readyState===1){
           ws.send(sl.buffer);
-          txPkts++;
         }
       }
     }
   };
   source.connect(sp); sp.connect(zeroGain); zeroGain.connect(audioCtx.destination);
-  log(`✅ ScriptProcessor 啟用(사용)（ctxRate=${audioCtx.sampleRate}Hz）`);
+  log(`✅ ScriptProcessor 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
 }
 
 async function join(){
@@ -261,15 +140,15 @@ async function join(){
   ws.binaryType = 'arraybuffer';
 
   ws.onopen = async ()=>{
-    const s=$('#status'); s.classList.add('now'); s.innerHTML='<span class="dot"></span> 已連線(연결됨)';
+    $('#status').textContent="已連線"; $('#status').classList.add('now');
     ws.send(JSON.stringify({name, src_lang: srcLang}));
 
     try{
       const devId = $('#micSel').value || undefined;
       stream = await getMicStream(devId);
       const info = stream.getAudioTracks()[0]?.getSettings?.() || {};
-      log(`🎙️ mic：${(stream.getAudioTracks()[0]?.label)||'未知/알 수 없음'} | 設定/설정：${JSON.stringify(info)}`);
-    }catch(e){ log(`❌ 取得麥克風失敗(마이크 실패)：${e}`); return; }
+      log(`🎙️ mic：${(stream.getAudioTracks()[0]?.label)||'未知'} | 設定：${JSON.stringify(info)}`);
+    }catch(e){ log(`❌ 取得麥克風失敗：${e}`); return; }
 
     audioCtx = new (window.AudioContext||window.webkitAudioContext)({sampleRate:48000});
     await audioCtx.resume().catch(()=>{});
@@ -305,28 +184,23 @@ async function join(){
 
         let sent=0;
         worklet.port.onmessage = (e)=>{
-          if(!micSuppressed() && ws && ws.readyState===1){
-            ws.send(e.data); txPkts++; sent++;
+          sent++; txPkts++;
+          if(!$('#mute').checked && ws && ws.readyState===1){
+            ws.send(e.data);
           }
         };
 
         source.connect(worklet); worklet.connect(zeroGain); zeroGain.connect(audioCtx.destination);
-        log(`✅ Worklet 啟用(사용)（ctxRate=${audioCtx.sampleRate}Hz）`);
+        log(`✅ Worklet 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
 
-        setTimeout(()=>{
-          if(sent===0){
-            log("⚠️ Worklet 無送包(전송 無)，改 ScriptProcessor");
-            try{ worklet.disconnect(); }catch(_){}
-            fallbackScriptProcessor(source);
-          }
-        }, 700);
+        setTimeout(()=>{ if(sent===0){ log("⚠️ Worklet 無送包，改 ScriptProcessor"); try{ worklet.disconnect(); }catch(_){ } fallbackScriptProcessor(source); } }, 700);
       } else {
         const source = audioCtx.createMediaStreamSource(stream);
         await fallbackScriptProcessor(source);
       }
     }catch(e){
       const source = audioCtx.createMediaStreamSource(stream);
-      log(`⚠️ Worklet 失敗(실패)：${e}`);
+      log(`⚠️ Worklet 失敗：${e}`);
       await fallbackScriptProcessor(source);
     }
 
@@ -337,48 +211,73 @@ async function join(){
 
   ws.onmessage = async (ev)=>{
     if(ev.data instanceof ArrayBuffer){
-      // ★ 只播放 MP3（譯音）。若為 WAV（原音），直接忽略。
+      // 伺服器來的音：原音=WAV（別人）或 譯音=MP3（給別人）
       const buf = ev.data;
-      const isWav = (function(){
-        if (buf.byteLength < 12) return false;
-        const dv = new DataView(buf);
-        const tag4 = (o)=> String.fromCharCode(dv.getUint8(o), dv.getUint8(o+1), dv.getUint8(o+2), dv.getUint8(o+3));
-        return tag4(0)==='RIFF' && tag4(8)==='WAVE';
-      })();
-      if (isWav) return;
-
-      const blob = new Blob([buf],{type:'audio/mpeg'});
+      const mime = sniffMime(buf);
+      const blob = new Blob([buf],{type:mime});
       const url  = URL.createObjectURL(blob);
       const a = new Audio(url);
       a.autoplay = true;
-
-      // 播放期間啟用 Ducking 抑制，避免「中→韓→中」回傳鏈
-      a.addEventListener('play', ()=>{ playbackCount++; });
-      a.addEventListener('ended', ()=>{ playbackCount=Math.max(0,playbackCount-1); lastPlaybackEndAt=performance.now(); URL.revokeObjectURL(url); });
-      a.addEventListener('error', ()=>{ playbackCount=Math.max(0,playbackCount-1); lastPlaybackEndAt=performance.now(); URL.revokeObjectURL(url); });
-
       if (typeof a.setSinkId === 'function' && $('#outSel').value){
-        try { await a.setSinkId($('#outSel').value); } catch(e){ log(`⚠️ 設定輸出失敗(출력 설정 실패)：${e}`); }
+        try { await a.setSinkId($('#outSel').value); } catch(e){ log(`⚠️ 設定輸出失敗：${e}`); }
       }
+      a.onended = ()=>{ URL.revokeObjectURL(url); };
       a.play().catch(()=>{});
       return;
     }
     try{
       const o=JSON.parse(ev.data);
-      if(o.type==="join")  log(`🔵 ${o.name} 加入(입장)，人數/인원 ${o.count}`);
-      if(o.type==="leave") log(`⚪ ${o.name} 離開(나가기)，人數/인원 ${o.count}`);
-      if(o.type==="final") log(`✅ ${o.from}（${o.dir}）\n原文/원문：${o.text}\n翻譯/번역：${o.mt}`);
-      if(o.type==="mute")  log(`🔇 ${o.name} ${o.muted?"已靜音(음소거)":"取消靜音(해제)"}`);
+      if(o.type==="join")  log(`🔵 ${o.name} 加入，人數 ${o.count}`);
+      if(o.type==="leave") log(`⚪ ${o.name} 離開，人數 ${o.count}`);
+      if(o.type==="final") log(`✅ ${o.from}（${o.dir}）\n原文：${o.text}\n翻譯：${o.mt}`);
+      if(o.type==="mute")  log(`🔇 ${o.name} ${o.muted?"已靜音":"取消靜音"}`);
       if(o.type==="error") log(`❌ ${o.msg}`);
+
+      // 只對「自己」送來的即時朗讀事件
+      if(o.type==="tts_client"){
+        speakNow(o.text, o.lang);
+      }
     }catch(_){}
   };
 
-  ws.onclose = ()=>{ log("連線關閉(연결 종료)"); leave(); };
+  ws.onclose = ()=>{ log("連線關閉"); leave(); };
+}
+
+function sniffMime(buf){
+  if (buf.byteLength >= 12){
+    const dv = new DataView(buf);
+    const riff = String.fromCharCode(dv.getUint8(0),dv.getUint8(1),dv.getUint8(2),dv.getUint8(3));
+    const wave = String.fromCharCode(dv.getUint8(8),dv.getUint8(9),dv.getUint8(10),dv.getUint8(11));
+    if (riff === 'RIFF' && wave === 'WAVE') return 'audio/wav';
+  }
+  return 'audio/mpeg';
+}
+
+/* 你的端：立即用 Web Speech 朗讀（走系統預設輸出、延遲極低） */
+let voices = [];
+function loadVoices(){ voices = window.speechSynthesis.getVoices() || []; }
+if ('speechSynthesis' in window){
+  loadVoices();
+  window.speechSynthesis.onvoiceschanged = loadVoices;
+}
+function speakNow(text, lang){
+  if (!('speechSynthesis' in window)) { log("⚠️ 瀏覽器不支援朗讀"); return; }
+  const u = new SpeechSynthesisUtterance(text);
+  u.lang = (lang==="ko" ? "ko-KR" : "zh-TW");
+  const cand = voices.filter(v => v.lang && v.lang.toLowerCase().startsWith(lang==="ko"?"ko":"zh"));
+  if (cand.length) u.voice = cand[0];
+  u.rate = 1.0; u.pitch = 1.0; u.volume = 1.0;
+  window.speechSynthesis.cancel(); // 避免排隊
+  window.speechSynthesis.speak(u);
 }
 
 $('#join').onclick = join;
 $('#leave').onclick = leave;
-$('#mute').onchange = ()=>{ /* 即時生效 */ };
+$('#mute').onchange = ()=>{ if(ws && ws.readyState===1) ws.send(JSON.stringify({type:'mute', value:$('#mute').checked})); };
+
+$('#micSel').onchange = async ()=>{ currentMicId = $('#micSel').value || ""; await refreshDevices(); };
+$('#outSel').onchange = ()=>{ currentOutId = $('#outSel').value || ""; };
+
 navigator.mediaDevices.addEventListener('devicechange', refreshDevices);
 (async ()=>{ try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){ } await refreshDevices(); })();
 </script>
